# vulnscan

./: .gitignore  LICENSE  OPEN_RESEARCH_RELEASE.md  README.md  adversarial.py  aggregate_research_results.py  comment_suppress.py  compare.py  context_isolation.py  cvebench.py  engine.py  eval_pipeline.py  git_paths.py  llm_client.py  llm_groq.py  main.py  multi_turn_audit.py  paper.tex  plot_semantic_cliff.py  prompts.py  pyproject.toml  reporter.py  requirements.txt  scanner.py  scanner_poison.py  scanner_poison_vs_suppress_analysis.py  self_knowledge.py  sleeper_experiment.py  transplant.py
contrib/: pre-commit-config.example.yaml
data/: cve_ground_truth.json  eval_manifest_smoke_18.json
tests/: test_comment_suppress.py  test_compare.py  test_cvebench.py  test_reporter.py  test_sleeper_stats.py
